src/objects/Puppy_Reservation__c.object
<CustomObject>
    <fields>
        <fullName>Date__c</fullName>
        <defaultValue>Today()</defaultValue>
        <label>Date</label>
        <required>true</required>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Location_Date__c</fullName>
        <formula>Puppy_Location__c +&quot;-&quot;+ Text(Date__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Location Date</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Puppy_Location__c</fullName>
        <label>Puppy Location</label>
        <referenceTo>Puppy_Location__c</referenceTo>
        <relationshipLabel>Puppies</relationshipLabel>
        <relationshipName>Puppy</relationshipName>
        <relationshipOrder>1</relationshipOrder>
        <type>MasterDetail</type>
        <writeRequiresMasterRead>true</writeRequiresMasterRead>
    </fields>
    <fields>
        <fullName>Puppy__c</fullName>
        <label>Puppy</label>
        <referenceTo>Puppy__c</referenceTo>
        <relationshipLabel>Location</relationshipLabel>
        <relationshipName>Location</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Reservation_Key__c</fullName>
        <label>Reservation Key</label>
        <length>50</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <label>Puppy Reservation</label>
    <listViews>
        <fullName>Area1</fullName>
        <booleanFilter>1</booleanFilter>
        <columns>NAME</columns>
        <columns>Puppy_Location__c</columns>
        <columns>Puppy__c</columns>
        <columns>Date__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Puppy_Location__c</field>
            <operation>equals</operation>
            <value>Area 1</value>
        </filters>
        <label>Area1</label>
    </listViews>
    <nameField>
        <displayFormat>R-{00000}</displayFormat>
        <label>Puppy Reservation</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Puppy Reservations</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
    <validationRules>
        <fullName>Check_Puppy_is_Approved</fullName>
        <active>true</active>
        <description>Check if puppy registration has been</description>
        <errorConditionFormula>TEXT(Puppy__r.Registration_Status__c) != &quot;Approved&quot;</errorConditionFormula>
        <errorDisplayField>Puppy__c</errorDisplayField>
        <errorMessage>Puppy need need to be approved before you can reserve  location</errorMessage>
    </validationRules>
</CustomObject>